--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,196 @@
-cmake==3.27.5
-contourpy==1.1.1
-corner==2.2.2
-cycler==0.11.0
-filelock==3.12.4
-fonttools==4.42.1
-glasflow==0.3.0
-h5py==3.9.0
-iteration-utilities @ git+https://github.com/MSeifert04/iteration_utilities.git@05e81f80026f2138952bd1a410bc715c89d7ab04
-Jinja2==3.1.2
-joblib==1.3.2
-kiwisolver==1.4.5
-lit==17.0.1
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-mpmath==1.3.0
-networkx==3.1
-numpy==1.26.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-packaging==23.1
-pandas==2.1.1
-Pillow==10.0.1
-plotly==5.17.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-scikit-learn==1.3.1
-scipy==1.11.3
-shapely==2.0.1
+asn1crypto==1.4.0
+astropy==4.2
+atomicwrites==1.4.0
+attrs==20.3.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
+blist==1.3.6
+bottle==0.12.19
+Bottleneck==1.2.1
+BTrees==4.3.1
+cached-property==1.5.2
+certifi==2020.6.20
+cffi==1.14.5
+chardet==4.0.0
+ciecplib==0.7.1
+click==7.1.2
+colorama==0.4.4
+conda==4.3.16
+configobj==5.0.6
+cov-core==1.15.0
+coverage==5.1
+cryptography==3.3.2
+cycler==0.10.0
+dbus-python==1.2.16
+decorator==4.4.2
+defusedxml==0.6.0
+distro-info==1.0
+docker==4.1.0
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+entrypoints==0.3
+et-xmlfile==1.0.1
+future==0.18.2
+gattlib==0.20201113
+gevent==20.9.0
+gitdb==4.0.9
+GitPython==3.1.27
+greenlet==0.4.17
+grpcio==1.30.2
+gssapi==1.6.1
+healpy==1.14.0
+hidapi==0.9.0.post3
+htcondor==10.3.0
+html5lib==1.1
+http-parser==0.9.0
+httplib2==0.18.1
+hypothesis==5.43.3
+idna==2.10
+importlib-metadata==1.6.0
+iniconfig==0.0.0
+ipython==7.20.0
+ipython-genutils==0.2.0
+jdcal==1.0
+jedi==0.18.0
+jeepney==0.6.0
+Jinja2==2.11.3
+joblib==0.17.0
+jpy==0.9.0
+JPype1==1.2.1
+jsonschema==3.2.0
+jupyter-core==4.7.1
+kdtree==0.7.1
+keyring==22.0.1
+keyrings.alt==4.0.2
+kiwisolver==1.3.1
+Kyoto-Cabinet==1.5
+ligo-proxy-utils==2.0.0
+llvmlite==0.35.0
+lxml==4.6.3
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+more-itertools==4.2.0
+nbformat==5.1.2
+netifaces==0.10.9
+nose==1.3.7
+nose2==0.9.2
+numba==0.52.0
+numexpr==2.7.2
+numpy==1.19.5
+odfpy==1.4.1
+olefile==0.46
+openpyxl==3.0.3
+packaging==20.9
+pandas==1.1.5
+parso==0.8.1
+pathtools==0.1.2
+patsy==0.5.1
+persistent==4.6.4
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.1.2
+plotly==4.14.3
+pluggy==0.13.0
+ply==3.11
+prelude==5.2.0
+promise==2.3
+prompt-toolkit==3.0.14
+protobuf==3.12.4
+psutil==5.8.0
+py==1.10.0
+py-radix==0.10.0
+pyalsa==1.1.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
+PyAudio==0.2.11
+PyBluez==0.23
+pycairo==1.16.2
+pycosat==0.6.3
+pycparser==2.20
+pycryptodomex==3.9.7
+pycups==2.0.1
+pycurl==7.43.0.6
+pyerfa==1.7.2
+Pygments==2.7.1
+PyGObject==3.38.0
+PyICU==2.5
+pykerberos==1.1.14
+pymad==0.10
+pyodbc==4.0.30
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyraf==2.1.15
+pyrsistent==0.15.5
+pysendfile==2.0.1
+pySFML==2.2.0
+PySimpleSOAP==1.16.2
+pysmbc==1.0.23
+pysmi==0.3.2
+pysnmp==4.4.12
+pystache==0.5.4
+pytango==9.3.2
+pytest==6.0.2
+pytest-arraydiff==0.3
+pytest-astropy==0.8.0
+pytest-astropy-header==0.1.2
+pytest-cov==2.10.1
+pytest-doctestplus==0.9.0
+pytest-filter-subpackage==0.1.1
+pytest-openfiles==0.5.0
+pytest-remotedata==0.3.2
+python-apt==2.2.1
+python-casacore==3.3.1
+python-dateutil==2.8.1
+python-debian==0.1.39
+python-debianbts==3.1.0
+python-ldap==3.2.0
+python-sane==2.9.1
+pytz==2021.1
+pyxattr==0.7.2
+pyxdg==0.27
+PyYAML==5.3.1
+qrencode==1.2
+reportbug==7.10.3+deb11u1
+requests==2.25.1
+requests-ecp==0.3.0
+requests-kerberos==0.12.0
+retrying==1.3.3
+rpy2==3.4.2
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+scikit-learn==0.23.2
+scipy==1.6.0
+SecretStorage==3.3.1
+selinux==3.1
+sentry-sdk==1.9.5
+setproctitle==1.3.2
+shortuuid==1.0.9
+simplegeneric==0.8.1
+simplejson==3.17.2
 six==1.16.0
-sympy==1.12
-tenacity==8.2.3
-threadpoolctl==3.2.0
-torch==2.0.1
-triton==2.0.0
-typing_extensions==4.8.0
-tzdata==2023.3
+smmap==5.0.0
+sortedcontainers==2.1.0
+soupsieve==2.2.1
+stsci.tools==3.6.0
+subvertpy==0.11.0
+tables==3.6.1
+texttable==1.6.3
+toml==0.10.1
+traitlets==5.0.5
+tzlocal==2.1
+unattended-upgrades==0.1
+urllib3==1.26.12
+urwid==2.1.2
+wandb==0.13.2
+wcwidth==0.1.9
+webencodings==0.5.1
+websocket-client==0.57.0
+wheezy.template==0.1.167
+xdg==5
+xlwt==1.3.0
+yenc==0.4.0
+zipp==1.0.0
+zodbpickle==1.0
+zope.event==4.4
+zope.interface==5.2.0
